--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
                     <div class="col-lg-10">
                         <h2>Let me introduce myself.</h2>
                         <p class="lead mb-5">
-                            I'm a software developer, student and a cloud engineer intern at IBM! Programming is my passion and everything you can see here I learned by myself to fulfil my dreams.
+                            I'm a software developer, student and a cloud engineer at IBM/Kyndryl! Programming is my passion and everything you can see here I learned by myself to fulfil my dreams.
                         </p>
                         <a class="btn btn-dark btn-xl" href="#services">What do I do?</a>
                     </div>
