--- a/templates/index.html
+++ b/templates/index.html
@@ -154,7 +154,7 @@
         <!-- Call to Action-->
         <section class="content-section bg-primary text-white">
             <div class="container px-4 px-lg-5 text-center">
-                <h2 class="mb-4">Don't waist your time on repetitive work. Let me automatize it for you!</h2>
+                <h2 class="mb-4">Don't waste your time on repetitive work. Let me automatize it for you!</h2>
                 <a class="btn btn-xl btn-light me-4" href="https://github.com/KarolinaZawisza/tesla-stock-alerts"><i class="fas fa-dollar-sign github-project-icon"></i>Stock updates</a>
                 <a class="btn btn-xl btn-dark" href="https://github.com/KarolinaZawisza/instagram-content-bot"><i class="fab fa-instagram github-project-icon"></i></i>Instagram bots</a>
             </div>
@@ -179,7 +179,7 @@
                         <a class="social-link rounded-circle text-white" href="https://www.instagram.com/tsukiliaro/"><i class="icon-social-instagram"></i></a>
                     </li>
                 </ul>
-                <p class="text-muted small mb-0">Copyright &copy; Karolina Zawisza {{ year }}</p>
+                <p class="text-muted small mb-0">Copyright &copy; Karolina Zawisza 2024</p>
             </div>
         </footer>
         <!-- Scroll to Top Button-->
